FR-6018: Plan Directory: Service names are cropped problem is fixed

--- a/Content/css/plan-directory.css
+++ b/Content/css/plan-directory.css
@@ -227,7 +227,6 @@ header#site-header:after {
 
 .web-services-container .item .label {
     display: block;
-    overflow: hidden;
     text-align: center;
     outline: none;
     color: #697882;
